kubernetes/apps/k8s00/yarr/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: yarr
  labels:
    # for gluetun and *arr apps that needs root privileges
    pod-security.kubernetes.io/enforce: privileged
