kubernetes/apps/k8s00/yarr/jellyseerr.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: yarr-jellyseerr
  namespace: yarr
  labels:
    app: jellyseerr

spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      securityContext:
        fsGroup: ${groupId}
      containers:
        - name: jellyseerr
          image: seerr/seerr:v3.2.0
          imagePullPolicy: Always
          securityContext:
            capabilities:
              drop: [ "ALL" ]
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
            readOnlyRootFilesystem: false
            privileged: false
            runAsUser: ${userId}
            runAsGroup: ${groupId}
          ports:
            - containerPort: 5055
              name: http
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /app/config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: yarr-jellyseerr-config
---
apiVersion: v1
kind: Service
metadata:
  name: yarr-jellyseerr
  namespace: yarr
spec:
  ports:
    - protocol: TCP
      port: 5055
      targetPort: http
  selector:
    app: jellyseerr
  type: ClusterIP
