kubernetes/apps/k8s00/yarr/qbittorrent.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: yarr-qbittorrent
  namespace: yarr
  labels:
    app: qbittorrent

spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      securityContext:
        fsGroup: ${groupId}
      dnsPolicy: None
      dnsConfig:
        nameservers:
          - 9.9.9.9
          - 149.112.112.112
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:5.2.0_v2.0.12-ls454
          imagePullPolicy: Always
          securityContext:
            capabilities:
              drop: [ "ALL" ]
            allowPrivilegeEscalation: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
            readOnlyRootFilesystem: false
            privileged: true
            runAsUser: ${userId}
            runAsGroup: ${groupId}
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          volumeMounts:
            - name: multimedia
              mountPath: /multimedia
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: multimedia
          persistentVolumeClaim:
            claimName: multimedia
        - name: config
          persistentVolumeClaim:
            claimName: yarr-qbittorrent-config
        - name: downloads
          persistentVolumeClaim:
            claimName: yarr-qbittorrent-downloads
---
apiVersion: v1
kind: Service
metadata:
  name: yarr-qbittorrent
  namespace: yarr
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http
  selector:
    app: qbittorrent
  type: ClusterIP
