kubernetes/apps/k8s00/yarr/sonarr.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: yarr-sonarr
  namespace: yarr
  labels:
    app: sonarr

spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      securityContext:
        fsGroup: ${groupId}
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:4.0.17.2952-ls308
          imagePullPolicy: Always
          securityContext:
            capabilities:
              drop: [ "ALL" ]
            allowPrivilegeEscalation: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
            readOnlyRootFilesystem: false
            privileged: true
            runAsUser: ${userId}
            runAsGroup: ${groupId}
          ports:
            - containerPort: 8989
              name: http
              protocol: TCP
          volumeMounts:
            - name: multimedia
              mountPath: /multimedia
            - name: config
              mountPath: /config
      volumes:
        - name: multimedia
          persistentVolumeClaim:
            claimName: multimedia
        - name: config
          persistentVolumeClaim:
            claimName: yarr-sonarr-config
---
apiVersion: v1
kind: Service
metadata:
  name: yarr-sonarr
  namespace: yarr
spec:
  ports:
    - protocol: TCP
      port: 8989
      targetPort: http
  selector:
    app: sonarr
  type: ClusterIP
