kubernetes/apps/k8s00/yarr/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: yarr-jellyfin
  namespace: yarr
spec:
  parentRefs:
    - name: yarr
      sectionName: https
      port: 443
  hostnames:
    # - "${jellyfin_hostname}"
    - "jellyfin.yarr.${serviceDomain}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: yarr-jellyfin
          port: 8096
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: yarr-qbittorrent
  namespace: yarr
spec:
  parentRefs:
    - name: yarr
      sectionName: https
      port: 443
  hostnames:
    # - "${qbittorrent_hostname}"
    - "qbittorrent.yarr.${serviceDomain}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: yarr-qbittorrent
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: yarr-prowlarr
  namespace: yarr
spec:
  parentRefs:
    - name: yarr
      sectionName: https
      port: 443
  hostnames:
    # - "${prowlarr_hostname}"
    - "prowlarr.yarr.${serviceDomain}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: yarr-prowlarr
          port: 9696
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: yarr-radarr
  namespace: yarr
spec:
  parentRefs:
    - name: yarr
      sectionName: https
      port: 443
  hostnames:
    # - "${radarr_hostname}"
    - "radarr.yarr.${serviceDomain}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: yarr-radarr
          port: 7878
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: yarr-sonarr
  namespace: yarr
spec:
  parentRefs:
    - name: yarr
      sectionName: https
      port: 443
  hostnames:
    # - "${sonarr_hostname}"
    - "sonarr.yarr.${serviceDomain}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: yarr-sonarr
          port: 8989
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: yarr-bazarr
  namespace: yarr
spec:
  parentRefs:
    - name: yarr
      sectionName: https
      port: 443
  hostnames:
    # - "${bazarr_hostname}"
    - "bazarr.yarr.${serviceDomain}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: yarr-bazarr
          port: 6767
